--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "next": "14.0.4",
+    "@faker-js/faker": "^8.2.0",
+    "classnames": "^2.3.2",
+    "dayjs": "^1.11.10"
   },
   "devDependencies": {
     "typescript": "^5",
