--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
     "mock": "npx tsx watch ./src/mocks/http.ts"
   },
   "dependencies": {
+    "@auth/core": "^0.20.0",
     "@faker-js/faker": "^8.2.0",
+    "@tanstack/react-query": "^5.17.9",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.10",
     "next": "14.0.4",
+    "next-auth": "^5.0.0-beta.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-intersection-observer": "^9.5.3"
   },
   "devDependencies": {
     "@mswjs/http-middleware": "^0.9.2",
+    "@tanstack/react-query-devtools": "^5.17.9",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20",
